# datares

./: .gitignore  README.md  openai-api.py  pyproject.toml  requirements.txt
examples/: generate_exercise_plan.py  generate_meal_plan.py  refine_meal_plan.py
lib/: haiku.py
