[project]
name = "datares-goose"
version = "0.1.0"
description = "An environment for DataRes to experiment with and provide feedback on Goose."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "goose-py>=0.9.8",
]

[dependency-groups]
dev = [
    "pyright>=1.1.393",
    "ruff>=0.9.4",
]

[tool.ruff]
exclude = [
    ".venv",
    "**/.venv",
]
force-exclude = true
line-length = 120

[tool.ruff.lint]
select = [ "E", "F", "I", "UP" ]
ignore = [ "E501" ]


[tool.ruff.lint.isort]
known-first-party = [
    "goose",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingModuleSource = false
useLibraryCodeForTypes = false
reportUnknownMemberType = false
reportUnknownVariableType = false
venvPath = "."
venv = ".venv"
